[package]
name = "extism-pdk"
version = "1.4.1"
edition = "2021"
authors = ["The Extism Authors", "oss@extism.org"]
license = "BSD-3-Clause"
homepage = "https://extism.org"
repository = "https://github.com/extism/rust-pdk"
description = "Extism Plug-in Development Kit (PDK) for Rust"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
extism-pdk-derive = { path = "./derive", version = "1.4.1" }
extism-manifest = { version = "1.10.0", optional = true }
extism-convert = { git = "https://github.com/Fisch03/extism", default-features = false, features = ["extism-pdk-path"] }
base64 = "0.22.1"

[features]
default = ["http", "json", "base64", "msgpack", "prost", "raw"]
http = ["extism-manifest"]

json = ["extism-convert/json"]
msgpack = ["extism-convert/msgpack"]
prost = ["extism-convert/prost"]
raw = ["extism-convert/raw"]
base64 = ["extism-convert/base64"]


[workspace]
members = [
  ".",
  "derive"
]
